# darkfish

./: CMakeLists.txt  README.md  main.cpp
src/: BoardPrinter.h
src/engine/: Board.cpp  Board.h  Piece.h
src/gui/: BoardPrinter.cpp  BoardPrinter.h  GUI.cpp  GUI.h
